--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 ﻿[window_size]
-OptionsDlg_width = -1
-OptionsDlg_height = -1
+OptionsDlg_width = 989
+OptionsDlg_height = 854
 NetworkInfoDlg_width = 1065
 NetworkInfoDlg_height = 920
 [taskbar_default_style]
@@ -59,7 +59,7 @@ unit_byte = true
 speed_unit = 0
 hide_unit = false
 hide_percent = false
-double_click_action = 0
+double_click_action = 5
 double_click_exe = C:\Windows\system32\Taskmgr.exe
 alow_out_of_border = 0
 [connection]
@@ -78,7 +78,7 @@ transparent_color = 13882066
 status_bar_color = 10855845
 task_bar_text_color = 0,0,0,0,0,0,0,0,
 specify_each_item_color = false
-tbar_display_item = 3
+tbar_display_item = 15
 font_name = 微软雅黑
 font_size = 9
 font_style = 0
@@ -87,7 +87,7 @@ up_string = "↑: "
 down_string = "↓: "
 cpu_string = "CPU: "
 memory_string = "内存: "
-task_bar_wnd_on_left = false
+task_bar_wnd_on_left = true
 task_bar_speed_short_mode = false
 unit_byte = true
 task_bar_speed_unit = 0
@@ -100,8 +100,8 @@ separate_value_unit_with_space = true
 show_tool_tip = true
 digits_number = 4
 double_click_action = 0
-double_click_exe = C:\Windows\system32\Taskmgr.exe
-cm_graph_type = false
+double_click_exe = C:\Users\devli\OneDrive\SoftWare\KeePass\KeePass.exe
+cm_graph_type = true
 auto_adapt_light_theme = false
 dark_default_style = 0
 light_default_style = -1
