--- a/config.ini
+++ b/config.ini
@@ -25,7 +25,7 @@ allow_skin_cover_font = true
 allow_skin_cover_text = true
 language = 0
 show_all_interface = false
-get_cpu_usage_by_cpu_times = true
+get_cpu_usage_by_cpu_times = false
 monitor_time_span = 1000
 [config]
 transparency = 80
@@ -56,10 +56,10 @@ speed_short_mode = false
 separate_value_unit_with_space = true
 show_tool_tip = true
 unit_byte = true
-speed_unit = 0
+speed_unit = 2
 hide_unit = false
 hide_percent = false
-double_click_action = 5
+double_click_action = 1
 double_click_exe = C:\Windows\system32\Taskmgr.exe
 alow_out_of_border = 0
 [connection]
@@ -90,7 +90,7 @@ memory_string = "内存: "
 task_bar_wnd_on_left = true
 task_bar_speed_short_mode = false
 unit_byte = true
-task_bar_speed_unit = 0
+task_bar_speed_unit = 2
 task_bar_hide_unit = false
 task_bar_hide_percent = false
 value_right_align = false
@@ -99,9 +99,9 @@ show_status_bar = false
 separate_value_unit_with_space = true
 show_tool_tip = true
 digits_number = 4
-double_click_action = 0
-double_click_exe = C:\Users\devli\OneDrive\SoftWare\KeePass\KeePass.exe
-cm_graph_type = true
+double_click_action = 2
+double_click_exe = C:\Program Files\Google\Chrome\Application\chrome.exe
+cm_graph_type = false
 auto_adapt_light_theme = false
 dark_default_style = 0
 light_default_style = -1
