--- a/config.ini
+++ b/config.ini
@@ -87,7 +87,7 @@ up_string = "↑: "
 down_string = "↓: "
 cpu_string = "CPU: "
 memory_string = "内存: "
-task_bar_wnd_on_left = true
+task_bar_wnd_on_left = false
 task_bar_speed_short_mode = false
 unit_byte = true
 task_bar_speed_unit = 2
