--- a/config.ini
+++ b/config.ini
@@ -32,7 +32,7 @@ transparency = 80
 always_on_top = true
 lock_window_pos = false
 show_notify_icon = true
-show_cpu_memory = true
+show_cpu_memory = false
 mouse_penetrate = false
 show_task_bar_wnd = true
 position_x = -1
