--- a/config.ini
+++ b/config.ini
@@ -76,7 +76,7 @@ memory_tip_value = 80
 task_bar_back_color = 13882066
 transparent_color = 13882066
 status_bar_color = 10855845
-task_bar_text_color = 0,0,0,0,0,0,0,0,
+task_bar_text_color = 16711750,0,0,0,0,0,0,0,
 specify_each_item_color = false
 tbar_display_item = 15
 font_name = 微软雅黑
